Update 'chatbot-aug6-1' component image to: quay.io/maysunfaisal/chatbot-aug6-1:ac3afa8a42f303f0e84971489c8dd498292847f0@sha256:39a50f993284ba7195a742236e64f03d235a011f7ec9589475ffeb779fd360c9

--- a/components/chatbot-aug6-1/overlays/development/deployment-patch.yaml
+++ b/components/chatbot-aug6-1/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: chatbot-aug6-1
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-ai-dev/ai-template-bootstrap-app:latest # use pre-built to bootstrap 
-        name: app-inference 
+        - image: quay.io/maysunfaisal/chatbot-aug6-1:ac3afa8a42f303f0e84971489c8dd498292847f0@sha256:39a50f993284ba7195a742236e64f03d235a011f7ec9589475ffeb779fd360c9 # use pre-built to bootstrap 
+          name: app-inference
